Align boxes and fix sidebar

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid red;
+} */
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -33,7 +37,8 @@ h1 {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
-  /* display: flex; */
+  display: flex;
+  flex-basis: 1 0 300px;;
 }
 
 .card {
@@ -54,6 +59,11 @@ h1 {
   list-style: none;
   padding: 0px;
   margin: 0px;
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 0;
+  padding-right: 80px;
+  /* flex-wrap: nowrap; */
 }
 
 li {
@@ -80,7 +90,24 @@ a {
   text-decoration: none;
 } */
 
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  flex: 0 1 300px;
+  padding: 10px;
+  margin: 10px;
+}
+
 /* .boxes {
   display: flex;
   flex-wrap: wrap;
+}
+
+.card {
+  flex: 0 1 300px;
+  padding: 10px;
+  margin: 10px;
 } */
